# q-excel

./: .gitignore  pyproject.toml
q_cura_api/: api_client.py  borger_soeg_cpr.py
q_excel/: edit_excel.py
test_local/: test_borger_soeg_cpr.py
